Close S0 and open A1 scope
Record S0a as accepted, frozen at bb4t-s0a, and integrated into bb4t/dev
by fast-forward. Mark the product sequence through S0b as PASS and A1 as
active.

bb4t's A1 role is limited to hosting the :app/bbagent application build
profile. The ordinary bb4t build still does not include SQLite, and the
pinned next.jdbc/sqlite-jdbc dependencies stay confined to that
inactive-by-default profile. No runtime, context, catalog, kernel,
operation, or SCI projection source changes.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>